--- a/School/appsettings.json
+++ b/School/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    //Key value ((Qualquer nome) - DefaultConnection), sem os Trusted_Connection=True;TrustServerCertificate=True a conexão n funciona
-    "DefaultConnection": "Server= DESKTOP-B0280IP\\SQLEXPRESS;Database=School;Trusted_Connection =True;TrustServerCertificate=True"
-  }
+    "ConnectionStrings": {
+        //Key value ((Qualquer nome) - DefaultConnection), sem os Trusted_Connection=True;TrustServerCertificate=True a conexão n funciona
+        "DefaultConnection": "Server= DESKTOP-LKFRNHQ;Database=School;Trusted_Connection =True;TrustServerCertificate=True"
+    }
 }
